--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Accueil</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -50,9 +52,9 @@
         </a>
       </div>
 
-      <p>Notre entreprise est spécialisée dans les soins et l’embellissement du regard. Grâce à un savoir-faire précis et des produits de qualité,<br>
-         nous proposons des prestations ciliaires adaptées à chaque cliente. Pour en savoir plus sur nos services, cliquez ici. <br>Pour toute demande 
-         ou prise de contact, cliquez là.</p>
+      <p><strong> entreprise est spécialisée dans les soins et l’embellissement du regard. Grâce à un savoir-faire précis et<br> des produits de qualité,
+         nous proposons des prestations ciliaires adaptées à chaque cliente. <br>Pour en savoir plus sur nos services, cliquez sur le logo instagram. <br>Pour toute demande 
+         ou prise de contact, remonter et allez sur prendre rdv </strong></p>
  
       <div class="coucou">
         <p><strong>Nous trouver</strong></p>
