--- a/disponibilites.html
+++ b/disponibilites.html
@@ -3,36 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Disponibilités</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<main>
-  <div class="banderole">
+  <header class="banderole">
     <div class="flex">
-      <a href="diplome.html">💁🏾‍♀️ Technicienne ciliaire diplômée🪄</a>
+      <a href="diplome.html">💁🏾‍♀️ Technicienne ciliaire diplômée 🪄</a>
       <a href="index.html">ACCUEIL</a>
       <a href="tarifs.html">TARIFS</a>
       <a href="disponibilites.html"><span class="souligne">DISPONIBILITÉS</span></a>
-      <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>      
-      <img src="images/photof.jpg">
+      <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>
+      <img src="images/photof.jpg" alt="logo">
     </div>
-  </div>
-  
-  <p><strong>
-    Ciliaire diplômée — sublimez votre regard entre des mains expertes ✨
-  </strong></p>
-</main>
+  </header>
 
-<footer>
-  <div class="page-image">
-    <img src="images/dispo.jpg">
-  </div>
-</footer>
+  <main>
+    <p class="intro">
+      <strong>Ciliaire diplômée — sublimez votre regard entre des mains expertes ✨</strong>
+    </p>
+
+    <div class="page-image">
+      <img src="images/dispo.jpg" alt="Disponibilités">
+    </div>
+  </main>
 
 </body>
 </html>
+
 
  
