--- a/diplome.html
+++ b/diplome.html
@@ -3,34 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Diplôme</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<main>
-  <div class="banderole">
+  <header class="banderole">
     <div class="flex">
-      <a href="diplome.html"><span class="souligne">💁🏾‍♀️ Technicienne ciliaire diplômée🪄</span></a>
+      <a href="diplome.html"><span class="souligne">💁🏾‍♀️ Technicienne ciliaire diplômée 🪄</span></a>
       <a href="index.html">ACCUEIL</a>
       <a href="tarifs.html">TARIFS</a>
       <a href="disponibilites.html">DISPONIBILITÉS</a>
       <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>
-      <img src="images/photof.jpg">
+      <img src="images/photof.jpg" alt="logo">
     </div>
-  </div>
-  
-  <p><strong>
-    Ciliaire diplômée — sublimez votre regard entre des mains expertes ✨
-  </strong></p>
-</main>
+  </header>
 
-<footer class="coco">
-  <div class="image">
-    <img src="images/diplome.jpg">
-  </div>
-</footer>
+  <main>
+    <p class="intro">
+      <strong>Ciliaire diplômée — sublimez votre regard entre des mains expertes ✨</strong>
+    </p>
+
+    <div class="page-image">
+      <img src="images/diplome.jpg" alt="Diplôme">
+    </div>
+  </main>
 
 </body>
 </html>
+
