--- a/tarifs.html
+++ b/tarifs.html
@@ -8,27 +8,57 @@
 </head>
 <body>
 
-  <header class="banderole">
-    <div class="flex">
-      <a href="diplome.html">💁🏾‍♀️ Technicienne ciliaire diplômée 🪄</a>
-      <a href="index.html">ACCUEIL</a>
-      <a href="tarifs.html"><span class="souligne">TARIFS</span></a>
-      <a href="disponibilites.html">DISPONIBILITÉS</a>
-      <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>
-      <img src="images/photof.jpg" alt="logo">
-    </div>
-  </header>
-
   <main>
+
+    <!-- BANDEROLE DU HAUT -->
+    <div class="banderole">
+      <div class="flex">
+        <a href="diplome.html">💁🏾‍♀️ Technicienne ciliaire diplômée 🪄</a>
+        <a href="index.html"><span class="souligne">ACCUEIL</span></a>
+        <a href="tarifs.html">TARIFS</a>
+        <a href="disponibilites.html">DISPONIBILITÉS</a>
+        <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>
+        <img src="images/photof.jpg" alt="logo">
+      </div>
+    </div>
+
+    <!-- TEXTE -->
     <p class="intro">
       <strong>Ciliaire diplômée — sublimez votre regard entre des mains expertes ✨</strong>
     </p>
 
-    <div class="page-image">
-      <img src="images/tarifs.jpg" alt="Tarifs">
-    </div>
   </main>
 
+  <footer>
+
+    <div class="page-image">
+      <img src="images/tarifs.jpg" alt="">
+    </div>
+  </footer>
+  <footer>
+
+    <div class="tout">
+
+      <div class="container">
+        <p>Instagram</p>
+        <a href="https://www.instagram.com/clo__lashes/" target="_blank">
+          <img src="images/insta.jpg" alt="Instagram">
+        </a>
+      </div>
+
+      <p class="description">
+        Entreprise spécialisée dans l’embellissement du regard.
+        Prestations ciliaires adaptées à chaque cliente.
+        Cliquez sur Instagram pour découvrir plus ✨</p>
+
+      <div class="coucou">
+        <p><strong>Nous trouver</strong></p>
+        <img src="images/plan.jpg" alt="Plan">
+      </div>
+
+    </div>
+
+  </footer>
 </body>
 </html>
 
