--- a/index.html
+++ b/index.html
@@ -3,45 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Accueil</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+  <!-- ===== MAIN ===== -->
   <main>
+      <div class="banderole">
+    <div class="flex">
+      <a href="diplome.html">💁🏾‍♀️ Technicienne ciliaire diplômée 🪄</a>
+      <a href="index.html"><span class="souligne">ACCUEIL</span></a>
+      <a href="tarifs.html">TARIFS</a>
+      <a href="disponibilites.html">DISPONIBILITÉS</a>
+      <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>
+      <img src="images/photof.jpg" alt="logo">
+    </div>
+  </div>
+    <p class="intro">
+      <strong>Sublimez votre regard entre des mains expertes prestations ciliaires adaptées à chaque cliente.✨<br> Pour cela double clic sur les cartes</strong>
+    </p>
+  </main>
 
-    <!-- BANDEROLE DU HAUT -->
-    <div class="banderole">
-      <div class="flex">
-        <a href="diplome.html">💁🏾‍♀️ Technicienne ciliaire diplômée 🪄</a>
-        <a href="index.html"><span class="souligne">ACCUEIL</span></a>
-        <a href="tarifs.html">TARIFS</a>
-        <a href="disponibilites.html">DISPONIBILITÉS</a>
-        <a href="mailto:clolashh@gmail.com">PRENDRE RDV</a>
-        <img src="images/photof.jpg" alt="logo">
+  <!-- ===== SECTION CARTES ===== -->
+  <section class="imag">
+
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="images/cil1.jpg" alt="">
+        </div>
+        <div class="card-back">
+          <h3>Volume Russe</h3>
+          <p>Effet intense et glamour ✨</p>
+        </div>
       </div>
     </div>
 
-    <!-- TEXTE -->
-    <p class="intro">
-      <strong>Ciliaire diplômée — sublimez votre regard entre des mains expertes ✨</strong>
-    </p>
-
-  </main>
-
-  <!-- FOOTER -->
-  <footer>
-
-    <!-- PHOTOS -->
-    <div class="imag">
-      <img src="images/cil1.jpg" alt="">
-      <img src="images/cil3.jpg" alt="">
-      <img src="images/cil4.jpg" alt="">
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="images/cil2.jpg" alt="">
+        </div>
+        <div class="card-back">
+        
+          <h3>Wispy</h3>
+          <p>Effet subtile et vaporeux 😙</p>
+        </div>
+      </div>
     </div>
 
-    <!-- BANDEROLE DU BAS -->
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="images/cil4.jpg" alt="">
+        </div>
+        <div class="card-back">
+          <h3>Pose complète</h3>
+          <p>Naturel mais structuré 💕</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="images/cil5.jpg" alt="">
+        </div>
+        <div class="card-back">
+          <h3>Pose Mixte</h3>
+          <p>Regard intense et naturel 🤩</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- ===== FOOTER ===== -->
+  <footer>
+
     <div class="tout">
 
       <div class="container">
@@ -51,10 +92,11 @@
         </a>
       </div>
 
-      <p><strong> entreprise est spécialisée dans les soins et l’embellissement du regard. Grâce à un savoir-faire précis et<br> des produits de qualité,
-         nous proposons des prestations ciliaires adaptées à chaque cliente. <br>Pour en savoir plus sur nos services, cliquez sur le logo instagram. <br>Pour toute demande 
-         ou prise de contact, remonter et allez sur prendre rdv </strong></p>
- 
+      <p class="description">
+        Entreprise spécialisée dans l’embellissement du regard.
+        Prestations ciliaires adaptées à chaque cliente.
+        Cliquez sur Instagram pour découvrir plus ✨</p>
+
       <div class="coucou">
         <p><strong>Nous trouver</strong></p>
         <img src="images/plan.jpg" alt="Plan">
