--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
     <p class="intro">
-      <strong>Sublimez votre regard entre des mains expertes prestations ciliaires adaptées à chaque cliente.✨<br> Pour cela double clic sur les cartes</strong>
+      <strong>Sublimez votre regard entre des mains expertes prestations ciliaires adaptées à chaque cliente.✨</strong>
     </p>
   </main>
 
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-
+                                                                          
     <div class="card">
       <div class="card-inner">
         <div class="card-front">
